syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

enum WidgetSlotTag {
	WIDGET_SLOT_QUICK_USE = 0;
	WIDGET_SLOT_ATTACH_AVATAR = 1;
}
